Settings: statusbar clock date customization (2/2)
This is a partial pick for clock date options with some modifications

Original commit:
https://github.com/SlimRoms/packages_apps_Settings/commit/312052742259b25edd583b58a10d2b973181b74d

Change-Id: I461125b7e2e05b2d1e274745ea8fbca4d366182d
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/xml/advanced_settings.xml
+++ b/res/xml/advanced_settings.xml
@@ -7,7 +7,7 @@
     <!-- Statusbar -->
     <PreferenceScreen
         android:id="@+id/statusbar_settings"
-        android:fragment="com.android.settings.benzo.StatusBarSettings"
+        android:fragment="com.android.settings.advanced.StatusBarSettings"
         android:title="@string/statusbar_settings_title"
         android:icon="@drawable/ic_settings_statusbar"
         />
