--- a/res/values/uber_strings.xml
+++ b/res/values/uber_strings.xml
@@ -83,5 +83,9 @@
 
     <string name="kerneladiutor_title">Kernel Adiutor</string>
     <string name="substratum_title">Substratum</string>
+
+    <!-- Notification counters -->
+    <string name="status_bar_notif_count_title">Show notification count</string>
+    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
 </resources>
 
