--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -17,6 +17,12 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/statusbar_settings_title">
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+       android:key="status_bar_notif_count"
+       android:title="@string/status_bar_notif_count_title"
+       android:summary="@string/status_bar_notif_count_summary"
+       android:defaultValue="false" />
+
     <PreferenceCategory
         android:title="@string/status_bar_clock_title">
 
