UBER Build Date
* To visably show the day ROM was built

Signed-off-by: Chet Kener <Cl3Kener@gmail.com>

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -147,4 +147,10 @@
                 settings:allowDividerAbove="true"
                 settings:allowDividerBelow="true"/>
 
+        <!-- UBER build date -->
+        <Preference android:key="build_date"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default" />
+
 </PreferenceScreen>
