--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -131,4 +131,7 @@
 
     <color name="usage_graph_dots">#B0BEC5</color>
 
+    <!-- General -->
+    <color name="theme_accent">@*android:color/material_deep_teal_500</color>
+
 </resources>
