--- a/res/values/uber_strings.xml
+++ b/res/values/uber_strings.xml
@@ -91,5 +91,8 @@
     <!-- Settings suggestions  -->
     <string name="disable_settings_suggestions_title">Disable suggestions</string>
     <string name="disable_settings_suggestions_summary">Disable suggestions on the dashboard</string>
+
+    <!-- Button settings  -->
+    <string name="button_settings_title">Buttons</string>
 </resources>
 
