--- a/res/xml/advanced_settings.xml
+++ b/res/xml/advanced_settings.xml
@@ -12,5 +12,12 @@
         android:icon="@drawable/ic_settings_statusbar"
         />
 
+    <!-- Buttons -->
+    <PreferenceScreen
+        android:id="@+id/button_settings"
+        android:fragment="com.android.settings.ButtonSettings"
+        android:title="@string/button_settings_title"
+	android:icon="@drawable/ic_settings_buttons"
+	/>
 
 </PreferenceScreen>
