--- a/res/xml/advanced_settings.xml
+++ b/res/xml/advanced_settings.xml
@@ -4,5 +4,13 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/advanced_settings_title" >
 
+    <!-- Statusbar -->
+    <PreferenceScreen
+        android:id="@+id/statusbar_settings"
+        android:fragment="com.android.settings.benzo.StatusBarSettings"
+        android:title="@string/statusbar_settings_title"
+        android:icon="@drawable/ic_settings_statusbar"
+        />
+
 
 </PreferenceScreen>
