--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -95,10 +95,10 @@
                 android:title="@string/screen_zoom_title"
                 settings:keywords="@string/screen_zoom_keywords" />
 
-        <DropDownPreference
-                android:key="auto_rotate"
-                android:summary="%s"
-                android:title="@string/display_auto_rotate_title" />
+        <PreferenceScreen
+                android:key="display_rotation"
+                android:fragment="com.android.settings.custom.DisplayRotation"
+                android:title="@string/display_rotation_title" />
 
         <PreferenceScreen
                 android:key="wifi_display"
