--- a/res/values/uber_strings.xml
+++ b/res/values/uber_strings.xml
@@ -1,4 +1,4 @@
-7<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2016 The UBER Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -34,6 +34,7 @@
     <string name="show_dev_already_enabled">No Need, Development settings are enabled by default.</string>
 
     <!-- Status bar - Clock -->
+    <string name="statusbar_settings_title">Statusbar</string>
     <string name="status_bar_clock_title">Clock settings</string>
     <string name="status_bar_clock_style_title">Clock style</string>
     <string name="status_bar_clock_style_right">Right</string>
@@ -68,6 +69,14 @@
     <string name="display_rotation_90_title">90 degrees</string>
     <string name="display_rotation_180_title">180 degrees</string>
     <string name="display_rotation_270_title">270 degrees</string>
+
+    <!--Volume keys -->
+    <string name="button_settings_title">Buttons</string>
+    <string name="volume_settings_title">Volume</string>
+    <string name="volume_rocker_wake_title">Volume rocker wake</string>
+    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
+    <string name="volume_rocker_music_controls_title">Playback control</string>
+    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
 
 </resources>
 
