--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -383,8 +383,8 @@
 
     <style name="PreviewPagerPageIndicator">
         <item name="dotGap">8dp</item>
-        <item name="pageIndicatorColor">?android:attr/colorControlNormal</item>
-        <item name="currentPageIndicatorColor">?android:attr/colorControlActivated</item>
+        <item name="pageIndicatorColor">@android:color/tertiary_text_light</item>
+        <item name="currentPageIndicatorColor">@android:color/primary_text_light</item>
     </style>
 
     <style name="LanguageCheckboxAndLabel">
