--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -32,6 +32,12 @@
                 settings:keywords="@string/keywords_display_auto_brightness"
                 android:summary="@string/auto_brightness_summary" />
 
+        <com.android.settings.preference.SystemSettingSwitchPreference
+                android:key="disable_settings_suggestions"
+                android:title="@string/disable_settings_suggestions_title"
+                android:summary="@string/disable_settings_suggestions_summary"
+                android:defaultValue="false" />
+
         <!-- Hide night mode for now
         <ListPreference
             android:key="night_mode"
