Settings: Move KernelAdiutor to dashboard
Launcher code taken from the SuperSU commit updated by Mat Pls

Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/uber_strings.xml
+++ b/res/values/uber_strings.xml
@@ -81,5 +81,6 @@
     <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
     <string name="supersu_title">SuperSU</string>
 
+    <string name="kerneladiutor_title">Kernel Adiutor</string>
 </resources>
 
