Settings: Add Substratum to dashboard
Launcher code taken from the SuperSU commit updated by Mat Pls

Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/uber_strings.xml
+++ b/res/values/uber_strings.xml
@@ -82,5 +82,6 @@
     <string name="supersu_title">SuperSU</string>
 
     <string name="kerneladiutor_title">Kernel Adiutor</string>
+    <string name="substratum_title">Substratum</string>
 </resources>
 
