--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -23,8 +23,7 @@
             android:key="volume_rocker_music_controls"
             android:summary="@string/volume_rocker_music_controls_summary"
             android:title="@string/volume_rocker_music_controls_title"
-            android:defaultValue="true"
-            android:dependency="volume_rocker_wake" />
+            android:defaultValue="true" />
 
     </PreferenceCategory>
 
