--- a/res/drawable/dashboard_category_title_bg.xml
+++ b/res/drawable/dashboard_category_title_bg.xml
@@ -15,12 +15,7 @@
     limitations under the License.
 -->
 
-<resources>
-
-    <!-- Storage Summary Title -->
-    <color name="storage_summary_title_color">#ff607d8b</color>
-
-    <color name="dashboard_category_title_background">@color/card_background</color>
-    <color name="selectable_card_background">@color/card_background</color>
-
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
+   <solid android:color="@color/dashboard_category_title_background" />
+</shape>
