--- a/res/values/projekt_colors.xml
+++ b/res/values/projekt_colors.xml
@@ -20,4 +20,7 @@
     <!-- Storage Summary Title -->
     <color name="storage_summary_title_color">#ff607d8b</color>
 
+    <color name="dashboard_category_title_background">@color/card_background</color>
+    <color name="selectable_card_background">@color/card_background</color>
+
 </resources>
