[2/2] Settings: Battery and Notification Lights PS2: *) Move menu options to sounds and notification      *) Remove samm debug cruft
PS5: *) Update UI

Put together from:

Author: DvTonder <david.vantonder@gmail.com>
Date:   Fri Apr 6 07:39:11 2012 -0400

    Settings: Notification light(LED) settings

    This commit adds the ability to configure the Notification light
    color and pulse rate both for the default and a custom applications
    list.

    This work was done in collaboration with Marko Mihovilić (m1h4) who
    wrote the initial implementation as a stand-alone application and
    helped with the fixes below.

    NOTE: Google Talk notifications originate from the "Google Services
    Framework" so in order to override their settings you need to add
    this package instead of the Google Talk package.

    Change-Id: I6837210367123bc02ea27a9b7b6b3cf80c738bf1

Author: Danny Baumann <dannybaumann@web.de>
Date:   Thu Nov 7 09:04:29 2013 +0100
Add back notification light settings.
Change-Id: I474a14a1b395407f5ca273a5d6a3a7f03f7e4698

Author: Sam Mortimer <sam@mortimer.me.uk>
Date:   Sat Jan 4 15:52:47 2014 -0800
Settings: fix led pulsespeedoff disable behaviour
Keep led pulsespeedoff disabled if pulsespeedon is
disabled.  This ensures that pulsespeedoff stays
disabled if onOffChangeable was set to false.  Fixes
problem where charged led pulsespeed off looks to
be configurable in the ui and thereby creating user
confusion.
Change-Id: I6ac7f630544bf719b39e1ddcab435322975430c8

Author: Sam Mortimer <sam@mortimer.me.uk>
Date:   Tue Dec 31 12:11:05 2013 -0800
[1/2] Settings: instant led test
Show LED color in realtime when configuring
notification colors.
Requires framework patch for notification
extra EXTRA_FORCE_SHOW_LIGHTS.
Change-Id: Ic7858d79cb2351c407afd547b33652a9e04ef1b9

Author: Sam Mortimer <sam@mortimer.me.uk>
Date:   Sat Feb 1 18:36:15 2014 -0800
Settings LightSettingsDialog: update led on text change
Change-Id: I135f37829b9b4fb2166afac9d9531b76a62f

--- a/res/values/uber_strings.xml
+++ b/res/values/uber_strings.xml
@@ -15,6 +15,8 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <string name="ok">OK</string>
+
     <!-- UBER build date-->
     <string name="build_date">UBER build date</string>
     <string name="build_date_default">2015-01-01-0000</string>
@@ -92,5 +94,24 @@
 
     <!-- Button settings  -->
     <string name="button_settings_title">Buttons</string>
+
+    <!-- Notification/Battery lights -->
+    <string name="leds_settings_title">LED settings</string>
+
+    <!-- Battery light settings  -->
+    <string name="battery_light_title">Battery LED settings</string>
+    <string name="battery_light_enable">Enable</string>
+    <string name="battery_low_pulse_title">Pulse if battery low</string>
+    <string name="battery_light_list_title">Colors</string>
+    <string name="battery_light_low_color_title">Battery low</string>
+    <string name="battery_light_medium_color_title">Charging</string>
+    <string name="battery_light_full_color_title">Charged (90%)</string>
+    <string name="battery_light_really_full_color_title">Charged (100%)</string>
+    <string name="edit_battery_settings">Edit battery settings</string>
+    <string name="notification_light_general_title">General</string>
+    <string name="led_color_green">Green</string>
+    <string name="led_color_red">Red</string>
+    <string name="led_color_blue">Blue</string>
+
 </resources>
 
