--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -36,6 +36,5 @@
     <bool name="config_allow_edit_carrier_enabled" translatable="false">false</bool>
 
     <!-- When true enable color temperature setting. -->
-    <bool name="config_enableColorTemperature">false</bool>
-
+    <bool name="config_enableColorTemperature">true</bool>
 </resources>
