--- a/res/values/uber_arrays.xml
+++ b/res/values/uber_arrays.xml
@@ -95,5 +95,18 @@
         <item>EEEE MM/dd</item>
         <item>@string/clock_date_format_custom</item>
     </string-array>
+
+    <!-- led color list -->
+    <string-array name="entries_led_colors" translatable="false">
+        <item>@string/led_color_green</item>
+        <item>@string/led_color_red</item>
+	<item>@string/led_color_blue</item>
+    </string-array>
+
+    <string-array name="values_led_colors" translatable="false">
+        <item>#FF00FF00</item>
+        <item>#FFFF0000</item>
+	<item>#FF0000FF</item>
+    </string-array>
 </resources>
 
