--- a/res/xml/advanced_settings.xml
+++ b/res/xml/advanced_settings.xml
@@ -20,4 +20,14 @@
 	android:icon="@drawable/ic_settings_buttons"
 	/>
 
+    <PreferenceCategory
+        android:key="leds"
+        android:title="@string/leds_settings_title" >
+
+        <PreferenceScreen
+                android:key="charging_light"
+                android:title="@string/battery_light_title"
+                android:fragment="com.android.settings.notificationlight.BatteryLightSettings" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
