--- a/res/xml/advanced_settings.xml
+++ b/res/xml/advanced_settings.xml
@@ -5,20 +5,28 @@
     android:title="@string/advanced_settings_title" >
 
     <!-- Statusbar -->
-    <PreferenceScreen
-        android:id="@+id/statusbar_settings"
+    <PreferenceCategory
+        android:key="statusbar"
+        android:title="@string/statusbar_settings_title" >
+
+	<PreferenceScreen
+        android:key="statusbar_settings"
         android:fragment="com.android.settings.advanced.StatusBarSettings"
         android:title="@string/statusbar_settings_title"
-        android:icon="@drawable/ic_settings_statusbar"
         />
+    </PreferenceCategory>
 
     <!-- Buttons -->
+    <PreferenceCategory
+        android:key="button"
+        android:title="@string/button_settings_title" >
+
     <PreferenceScreen
-        android:id="@+id/button_settings"
+        android:key="button_settings"
         android:fragment="com.android.settings.ButtonSettings"
         android:title="@string/button_settings_title"
-	android:icon="@drawable/ic_settings_buttons"
 	/>
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="leds"
