Add back easy reset procedure Fix pulse battery lights not working
https://gerrit.omnirom.org/#/c/19334/
https://gerrit.omnirom.org/#/c/19354/
combined into our tree

--- a/res/values/uber_strings.xml
+++ b/res/values/uber_strings.xml
@@ -16,6 +16,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="ok">OK</string>
+    <string name="reset">Reset</string>
     <string name="advanced">Advanced</string>
     <string name="profiles_add">Add...</string>
     <string name="profile_choose_app">Choose app</string>
