--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -17,11 +17,60 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/statusbar_settings_title">
 
-    <com.android.settings.preference.CustomSystemSettingSwitchPreference
-       android:key="status_bar_notif_count"
-       android:title="@string/status_bar_notif_count_title"
-       android:summary="@string/status_bar_notif_count_summary"
-       android:defaultValue="false" />
+
+    <PreferenceCategory
+        android:key="battery_settings"
+        android:title="@string/notification_title">
+
+        <com.android.settings.preference.CustomSystemSettingSwitchPreference
+           android:key="status_bar_notif_count"
+           android:title="@string/status_bar_notif_count_title"
+           android:summary="@string/status_bar_notif_count_summary"
+           android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="battery_settings"
+        android:title="@string/battery_title">
+
+        <ListPreference
+            android:key="statusbar_battery_enable"
+            android:title="@string/battery_enable_title"
+            android:entries="@array/entries_battery_percent"
+            android:entryValues="@array/values_battery_percent"
+            android:persistent="false"
+            android:defaultValue="1"/>
+
+        <ListPreference
+            android:key="statusbar_battery_style"
+            android:title="@string/battery_style_title"
+            android:entries="@*android:array/entries_battery_styles"
+            android:entryValues="@*android:array/values_battery_styles"
+            android:persistent="false"
+            android:defaultValue="0"/>
+
+        <ListPreference
+            android:key="statusbar_battery_percent"
+            android:title="@string/battery_percent_title"
+            android:entries="@array/entries_battery_percent"
+            android:entryValues="@array/values_battery_percent"
+            android:persistent="false"
+            android:defaultValue="2"/>
+
+        <com.android.settings.preference.CustomSystemSettingSwitchPreference
+            android:key="statusbar_battery_percent_inside"
+            android:title="@string/statusbar_percent_inside_title"
+            android:summary="@string/statusbar_percent_inside_summary"
+            android:defaultValue="false"/>
+
+        <SwitchPreference
+            android:key="statusbar_battery_charging_image"
+            android:title="@string/statusbar_charging_image_title"
+            android:summary="@string/statusbar_charging_image_summary"
+            android:defaultValue="true"/>
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:title="@string/status_bar_clock_title">
